# leet-tasks

./: .clang-format  .gitignore  5  CMakeLists.txt  README.md
cmake/: AddFlagsLibrary.cmake  AddFlagsLibrary_BACKUP_365588.cmake  AddFlagsLibrary_BASE_365588.cmake  PreventInSourceBuilds.cmake  SetOutputDirectories.cmake
src/: CMakeLists.txt  main.cpp  timer.hpp
src/Parallel/: CMakeLists.txt
src/Parallel/include/Parallel/: thread_pool.hpp
src/Parallel/thread_pool/: CMakeLists.txt  thread_pool.cpp
